--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "lut-fullstack-react-next-js",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "cd tracker && yarn dev"
+  }
 }
