--- a/tracker/package.json
+++ b/tracker/package.json
@@ -16,6 +16,7 @@
     "apollo-client": "^2.6.4",
     "apollo-link-http": "^1.5.16",
     "apollo-server-micro": "^2.9.8",
+    "dotenv": "^8.2.0",
     "graphql-tag": "^2.10.1",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.1.2",
