--- a/tracker/package.json
+++ b/tracker/package.json
@@ -16,8 +16,10 @@
     "apollo-client": "^2.6.4",
     "apollo-link-http": "^1.5.16",
     "apollo-server-micro": "^2.9.8",
+    "babel-plugin-import-graphql": "^2.7.0",
     "dotenv": "^8.2.0",
     "graphql-tag": "^2.10.1",
+    "graphql-toolkit": "^0.7.4",
     "isomorphic-unfetch": "^3.0.0",
     "mongoose": "^5.7.11",
     "next": "9.1.2",
